tests/fail/ch_stable/invalid_type_in_placeholder.stderr
error: Unknown format option: ':vec::Vec<usize>'.
       Hint: Paths (or anything with a ':') are not allowed in the type inside of a placeholder.
       Put the path in the arguments behind the format string or `use` the type:
       At "{std::vec::Vec<usize>}"
                ^^^^^^^^^^^^^^^^
  --> $DIR/invalid_type_in_placeholder.rs:17:26
   |
17 |     sscanf::scanf!("hi", "{std::vec::Vec<usize>}");
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^

error: Unknown format option: ':NoFromStr'.
       Hint: Paths (or anything with a ':') are not allowed in the type inside of a placeholder.
       Put the path in the arguments behind the format string or `use` the type:
       At "{module::NoFromStr}"
                   ^^^^^^^^^^
  --> $DIR/invalid_type_in_placeholder.rs:18:26
   |
18 |     sscanf::scanf!("hi", "{module::NoFromStr}");
   |                          ^^^^^^^^^^^^^^^^^^^^^

error: Invalid type in placeholder: expected identifier.
       Hint: The syntax for placeholders is {<type>} or {<type>:<config>}. Make sure <type> is a valid type.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging:
       At "{3}"
            ^
  --> $DIR/invalid_type_in_placeholder.rs:24:26
   |
24 |     sscanf::scanf!("hi", "{3}");
   |                          ^^^^^

error: Invalid type in placeholder: expected identifier.
       Hint: The syntax for placeholders is {<type>} or {<type>:<config>}. Make sure <type> is a valid type.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging:
       At "{.}"
            ^
  --> $DIR/invalid_type_in_placeholder.rs:25:26
   |
25 |     sscanf::scanf!("hi", "{.}");
   |                          ^^^^^

error: Invalid type in placeholder: expected identifier.
       Hint: The part before the ':' is interpreted as a type with no checks done by scanf.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging:
       At "{3:/hi/}"
            ^
  --> $DIR/invalid_type_in_placeholder.rs:27:26
   |
27 |     sscanf::scanf!("hi", "{3:/hi/}");
   |                          ^^^^^^^^^^

error: Invalid type in placeholder: expected identifier.
       Hint: The part before the ':' is interpreted as a type with no checks done by scanf.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging:
       At "{.:/hi/}"
            ^
  --> $DIR/invalid_type_in_placeholder.rs:28:26
   |
28 |     sscanf::scanf!("hi", "{.:/hi/}");
   |                          ^^^^^^^^^^

error[E0412]: cannot find type `bob` in this scope
  --> $DIR/invalid_type_in_placeholder.rs:26:5
   |
26 |     sscanf::scanf!("hi", "{bob}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `bob` in this scope
  --> $DIR/invalid_type_in_placeholder.rs:29:5
   |
29 |     sscanf::scanf!("hi", "{bob:/hi/}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> $DIR/invalid_type_in_placeholder.rs:21:26
   |
21 |     sscanf::scanf!("hi", "{NoRegex}");
   |                          ^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
